--- a/public/home.html
+++ b/public/home.html
@@ -106,18 +106,21 @@
 
         <div class="content-container">
             <!-- 샘플 컨텐츠들 -->
+
+            
             <div class="content">
                 <img src="img/car.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <a href="detail.html"> <br> 자동차 정비 | 기본 검사 </a> <!--대분류 | 소분류-->
+                    <a href="detail.html">자동차 정비 | 기본 검사 </a> <!--대분류 | 소분류-->
                 </div>
             </div>
             <div class="content">
                 <img src="img/ant.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
-                    <a href="detail.html"> <br> 방역 | 개미 </a>
+                    <a href="detail.html">방역 | 개미 </a>
                 </div>
             </div>
+            <!-- 이하 br 태그 지울것 -->
             <div class="content">
                 <img src="img/psy.jpg" width=100% height=100% alt="content-img">
                 <div class="content-text">
