--- a/public/category.html
+++ b/public/category.html
@@ -11,13 +11,12 @@
 <body>
     <div class="menu-container"> <!-- 메뉴바 -->
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
-        <div class="search-container">
+        <form action ="category.html" class = "search-container">
             <button class="search-button">
                 <img src="img/search.png" alt="search-img" class="search-img">
             </button>
-            <input type="text" class="search-input" placeholder="검색어를 입력하세요">
-
-        </div>
+            <input type="text" class="search-input" placeholder="검색어를 입력하세요"> 
+        </form>
         <div id=login>
             <button onclick="openPopup()" class="login-button">로그인</button>
             <a href="signup.html" class="signup-button">회원가입</a>
