--- a/public/detail.html
+++ b/public/detail.html
@@ -10,13 +10,13 @@
 <body>
     <div class="menu-container"> <!-- 메뉴바 -->
         <a href="home.html"><img src="img/logo.jpg" alt="Logo" class="logo"></a>
-        <div class="search-container">
+
+            <form action ="category.html" class = "search-container">
             <button class="search-button">
                 <img src="img/search.png" alt="search-img" class="search-img">
             </button>
             <input type="text" class="search-input" placeholder="검색어를 입력하세요"> 
-
-        </div>
+        </form>
         <div id=login>
             <button onclick="openPopup()" class="login-button">로그인</button>
             <a href="signup.html" class="signup-button">회원가입</a>
@@ -259,6 +259,7 @@
                 </div>
                 <div class="explain-text-mobile">
                     <div class="explain-content-mobile">
+                        <p>
                             <h2>만족도 높은 보컬 레슨</h2><br>
                             1. 흔들림 없는 음정 훈련
                             <br> --- <br> --- <br>
