카드 생성 버튼 추가 (테스트용)

--- a/public/category.html
+++ b/public/category.html
@@ -280,6 +280,9 @@
             <!--여기까지 샘플-->
         </div>
     </div>
+
+    <!-- 데이터 추가 샘플 버튼 -->
+    <button id="createCardButton" onclick = "createCardButton()">카드 생성</button>
     
     <!-- 모바일 햄버거 버튼 -->
     <div class="navbar_overlay"></div>
