--- a/public/category.html
+++ b/public/category.html
@@ -277,6 +277,10 @@
                 <h4 class="card-title">타이어 내개로 오라~</h4>
             </div>
             <!--여기까지 샘플-->
+
+            
+    <!-- 데이터 추가 테스트용 버튼 -->
+    <button id="createCardButton" onclick = "createCardButton()">카드 생성</button>
         </div>
     </div>
     
