detail 페이지 내용 바꾸기 적용중

--- a/public/detail.html
+++ b/public/detail.html
@@ -247,8 +247,8 @@
                 </div>
                 </div>
                 <div class="person-content content">
+                    <h3>싸이</h3>
                     <ul>
-                        <h3>싸이</h3>
                         <li><h4>전화번호</h4><h5>010-1234-5678</h5></li>
                         <li><h4>이메일</h4><h5>psy@naver.com</h5></li>
                         <li class="history1">🎶P-nation 대표(약력1)</li>
@@ -278,6 +278,9 @@
             </div>
         </div>
     </div>
+
+<!--임시 테스트 버튼 -->
+    <button id = "tempButton">테스트 버튼</button>
     <div class="navbar_overlay"></div>
 
     <div class="navbar_burger">
