--- a/public/detail.html
+++ b/public/detail.html
@@ -25,7 +25,7 @@
             <div class="popup-content">
                 <span onclick="closePopup()" class="close-btn">&times;</span>
                 <h2>로그인</h2>
-                <form action="login">
+                <form action="#">
                     <input type="text" name="id" placeholder="아이디">
                     <input type="password" name="pw" placeholder="비밀번호">
                     <input type="submit" value="로그인">
